--- a/style.css
+++ b/style.css
@@ -1,4 +1,80 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
   margin: 0;
   padding: 0;
+}
+
+
+body{
+    display: flex;
+    flex-direction: column;
+    font-family: "Roboto", sans-serif;
+}
+
+.header{
+    background-color: #1F2937;
+}
+
+.htop{
+    display: flex;
+    justify-content: space-between;
+    width: 1100px;
+    margin: auto;
+    padding: 15px;
+}
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 15px;
+}
+
+a{
+    text-decoration: none;
+}
+
+.img-header{
+    width: 600px;
+    height: 250px;
+}
+
+.hbody{
+    display: flex;
+    align-items: center;
+    width: 1100px;
+    margin: auto;
+    gap: 20px;
+    margin-bottom: 80px;
+}
+
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.htext, a{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.htitle{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    width: 500px
+}
+
+.htext{
+    width: 450px;
+    margin-bottom: 10px;
+}
+
+button{
+    background-color: #3882F6;
+    color: white;
+    padding: 4px 12px;
+    border-radius: 4px;
+    border: none;
 }
