--- a/style.css
+++ b/style.css
@@ -78,3 +78,41 @@ button{
     border-radius: 4px;
     border: none;
 }
+
+.section-2{
+    margin: 50px 0px 50px;
+}
+
+.s2title{
+    margin: auto;
+    width: 300px;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    margin-bottom: 30px;
+}
+
+
+.boxes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.boxtext, .square{
+    margin: auto;
+}
+
+.boxtext{
+    font-size: 18px;
+    text-align: center;
+    width: 200px;
+}
+
+.square{
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 140px;
+}
